Fixes and refactoring of Board Schemas.
